# up-pt-2

./: .env.example  .gitignore  README.md  generate_cloud.py  inspect_cloud.py  main.py  occlusion_experiment.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
data/Livox/: settings.env
data/Yanco-1-1-1-b/: 1-1-1-b.pcd  settings.env
scripts/: process_data.sh
