[project]
name = "tls-volume-estimation"
version = "0.2.0"
description = "TLS point cloud volume estimation methods"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alphashape>=1.3.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "open3d>=0.19.0",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
]
